# ucb-jaco-control

./: .gitmodules
matlab/: planar_arm.m
matlab/planar_arm/: planar_arm.m
ucb_jaco_control/: CMakeLists.txt  package.xml  ucb_jaco_control_ros_plugins.xml
ucb_jaco_control/config/: DynamicsModelParams.cfg  PIDGains.cfg  jaco_test_controller_config.yaml
ucb_jaco_control/include/ucb_jaco_control/: buffer.h  computed_torque_controller.h  constant_trajectory.h  pd_computed_torque_controller.h  pid_computed_torque_controller.h  pid_regulation_controller.h  pid_tracking_controller.h  pid_trajectory_controller.h  robot_dynamics.h  runge_kutta.h  sinusoid_trajectory.h  sinusoidal_trajectory.h  state_feedback_controller.h  test_controller_ros.h  trajectory.h  two_link_planar_arm_dynamics.h  urdf_robot_dynamics.h
ucb_jaco_control/launch/: jaco_gazebo.launch  jaco_simulator.launch  test_controller.launch
ucb_jaco_control/src/: jaco_simulator_ros.cpp  test_controller_ros.cpp  torque_control_test_node.cpp
ucb_jaco_control/test/: test_buffer.cpp  test_constant_trajectory.cpp  test_pd_computed_torque_control.cpp  test_pid_computed_torque_control.cpp  test_pid_regulation_controller.cpp  test_pid_tracking_controller.cpp  test_pid_trajectory_controller.cpp  test_robot_dynamics.cpp  test_runge_kutta.cpp  test_sinusoidal_trajectory.cpp
